improved image captions a little bit

--- a/flexi_meetup.html
+++ b/flexi_meetup.html
@@ -90,7 +90,7 @@
 
 				<div class="gallery">
 					<a data-fancybox="storyboards"
-					   data-caption="Original version with unsorted list of suggestions"
+					   data-caption="Usage scenarios showcasing both the originator of the event and the people invited."
 					   href="img/fleximeetup/storyboards%20together.png">
 						<img class="gallery1" src="img/fleximeetup/storyboards%20together.png"/>
 					</a>
@@ -103,7 +103,7 @@
 
 				<div class="gallery">
 					<a data-fancybox="sketches"
-					   data-caption="Original version with unsorted list of suggestions"
+					   data-caption="First set of paper mockups."
 					   href="img/fleximeetup/sketches.png">
 						<img class="gallery1" src="img/fleximeetup/sketches.png"/>
 					</a>
@@ -128,7 +128,7 @@
 
 				<div class="gallery">
 					<a data-fancybox="mockups"
-					   data-caption="Original version with unsorted list of suggestions"
+					   data-caption="Balsamiq mockups used for the interactive prototype that was user tested."
 					   href="img/fleximeetup/second%20balsamiq.png">
 						<img class="gallery1" src="img/fleximeetup/second%20balsamiq.png"/>
 					</a>
@@ -154,30 +154,36 @@
 
 				<div class="gallery">
 					<a data-fancybox="mobile"
-					   data-caption="sadfasdf" href="img/fleximeetup/1.splash.png">
+					   data-caption="Splash screen"
+                       href="img/fleximeetup/1.splash.png">
 						<img class="gallery3 left_image" src="img/fleximeetup/1.splash.png"/>
 					</a>
 					<a data-fancybox="mobile"
-					   data-caption="sadfasdf" href="img/fleximeetup/2.homescreen.png">
+					   data-caption="Home screen with a list of upcoming events."
+                       href="img/fleximeetup/2.homescreen.png">
 						<img class="gallery3 center_image" src="img/fleximeetup/2.homescreen.png"/>
 					</a>
 					<a data-fancybox="mobile"
-					   data-caption="sadfasdf" href="img/fleximeetup/3.new%20event%201.png">
+					   data-caption="Creation of a new event."
+                       href="img/fleximeetup/3.new%20event%201.png">
 						<img class="gallery3 right_image" src="img/fleximeetup/3.new%20event%201.png"/>
 					</a>
 
 					<div class="gallery_separator"></div>
 
 					<a data-fancybox="mobile"
-					   data-caption="sadfasdf" href="img/fleximeetup/4.new%20event%202%201.png">
+					   data-caption="Creation of a new event."
+                       href="img/fleximeetup/4.new%20event%202%201.png">
 						<img class="gallery3 left_image" src="img/fleximeetup/4.new%20event%202%201.png"/>
 					</a>
 					<a data-fancybox="mobile"
-					   data-caption="sadfasdf" href="img/fleximeetup/5.new%20event%202%202.png">
+					   data-caption="Creation of a new event."
+                       href="img/fleximeetup/5.new%20event%202%202.png">
 						<img class="gallery3 center_image" src="img/fleximeetup/5.new%20event%202%202.png"/>
 					</a>
 					<a data-fancybox="mobile"
-					   data-caption="sadfasdf" href="img/fleximeetup/6.new%20event%203.png">
+					   data-caption="Creation of a new event."
+                       href="img/fleximeetup/6.new%20event%203.png">
 						<img class="gallery3 right_image" src="img/fleximeetup/6.new%20event%203.png"/>
 					</a>
 				</div>
