--- a/isoprofiler.html
+++ b/isoprofiler.html
@@ -89,7 +89,7 @@
 
 				<div class="gallery">
 					<a data-fancybox="original"
-					   data-caption="Original version with unsorted list of suggestions"
+					   data-caption="Screenshot with the beta version."
 					   href="img/isoprofiler/Screen%20Shot%202016-04-07%20at%204.13.21%20PM.png">
 						<img class="gallery1" src="img/isoprofiler/Screen%20Shot%202016-04-07%20at%204.13.21%20PM.png"/>
 					</a>
@@ -128,12 +128,12 @@
 
 				<div class="gallery">
 					<a data-fancybox="ideas" class="needsBorder"
-					   data-caption="Original version with unsorted list of suggestions"
+					   data-caption="Sketches during ideation"
 					   href="img/isoprofiler/A4%204x8%20grid%201.png">
 						<img class="gallery2 left_image with_border" src="img/isoprofiler/A4%204x8%20grid%201.png"/>
 					</a>
 					<a data-fancybox="ideas" class="needsBorder"
-					   data-caption="Original version with unsorted list of suggestions"
+					   data-caption="Sketches during ideation"
 					   href="img/isoprofiler/A4%204x8%20grid%202.png">
 						<img class="gallery2 right_image with_border" src="img/isoprofiler/A4%204x8%20grid%202.png"/>
 					</a>
@@ -141,12 +141,12 @@
 					<div class="gallery_separator"></div>
 
 					<a data-fancybox="ideas" class="needsBorder"
-					   data-caption="Original version with unsorted list of suggestions"
+					   data-caption="Sketches during ideation"
 					   href="img/isoprofiler/A4%204x8%20grid%203.png">
 						<img class="gallery2 left_image with_border" src="img/isoprofiler/A4%204x8%20grid%203.png"/>
 					</a>
 					<a data-fancybox="ideas" class="needsBorder"
-					   data-caption="Original version with unsorted list of suggestions"
+					   data-caption="Sketches during ideation"
 					   href="img/isoprofiler/A4%204x8%20grid%204.png">
 						<img class="gallery2 right_image with_border" src="img/isoprofiler/A4%204x8%20grid%204.png"/>
 					</a>
@@ -159,7 +159,7 @@
 
 				<div class="gallery">
 					<a data-fancybox="ideas"
-					   data-caption="Original version with unsorted list of suggestions"
+					   data-caption="Dataset view variations"
 					   href="img/isoprofiler/dataset_view_variations.png">
 						<img class="gallery1" src="img/isoprofiler/dataset_view_variations.png"/>
 					</a>
@@ -173,7 +173,7 @@
 
 				<div class="gallery">
 					<a data-fancybox="ideas"
-					   data-caption="Original version with unsorted list of suggestions"
+					   data-caption="Preferred dataset view design"
 					   href="img/isoprofiler/dataset_view_4.png">
 						<img class="gallery1" src="img/isoprofiler/dataset_view_4.png"/>
 					</a>
@@ -189,7 +189,7 @@
 
 				<div class="gallery">
 					<a data-fancybox="ideas"
-					   data-caption="Original version with unsorted list of suggestions"
+					   data-caption="Isoforms view variations"
 					   href="img/isoprofiler/isoforms_view_no_margins.png">
 						<img class="gallery1" src="img/isoprofiler/isoforms_view_no_margins.png"/>
 					</a>
@@ -214,12 +214,12 @@
 
 				<div class="gallery">
 					<a data-fancybox="filters" class="needsBorder"
-					   data-caption="Original version with unsorted list of suggestions"
+					   data-caption="Sketches for filters"
 					   href="img/isoprofiler/A4%204x8%20grid%205.png">
 						<img class="gallery2 left_image with_border" src="img/isoprofiler/A4%204x8%20grid%205.png"/>
 					</a>
 					<a data-fancybox="filters" class="needsBorder"
-					   data-caption="Original version with unsorted list of suggestions"
+					   data-caption="Sketches for filters"
 					   href="img/isoprofiler/A4%204x8%20grid%206.png">
 						<img class="gallery2 right_image with_border" src="img/isoprofiler/A4%204x8%20grid%206.png"/>
 					</a>
@@ -227,7 +227,7 @@
 
 				<div class="gallery">
 					<a data-fancybox="filters"
-					   data-caption="Original version with unsorted list of suggestions"
+					   data-caption="Filter mockups"
 					   href="img/isoprofiler/filters.png">
 						<img class="gallery1" src="img/isoprofiler/filters.png"/>
 					</a>
@@ -245,7 +245,7 @@
 
 				<div class="gallery">
 					<a data-fancybox="final"
-					   data-caption="Original version with unsorted list of suggestions"
+					   data-caption="Screenshot with the released version"
 					   href="img/isoprofiler/final_mockup.png">
 						<img class="gallery1" src="img/isoprofiler/final_mockup.png"/>
 					</a>
