--- a/projects.html
+++ b/projects.html
@@ -2,15 +2,18 @@
 <html lang="en">
 	<head>
 		<link rel="stylesheet" href="style/resets.css"/>
-		<!--<link rel="stylesheet" href="style/customgrid.css"/>-->
 		<link rel="stylesheet" href="style/layout.css"/>
 		<link rel="stylesheet" href="style/projects.css"/>
+		<link rel="stylesheet" href="style/project_typography.css"/>
 
         <meta name="viewport" content="width=device-width">
         <meta charset="utf-8"/>
 		
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'/>
-		
+		<link href='https://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900' rel='stylesheet' type='text/css'/>
+		<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'/>
+		<link href='https://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'/>
+
 		<!-- Add jQuery library -->
 		<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
 
@@ -61,12 +64,8 @@
         <div id="top_menu"></div>
 		<div id="side_menu"></div>
 		<div id="right_panel">
-			<div id="about_projects">
-				<p>These are a part of the projects I have been working on. You can read the whole story for each project, where there is a lengthy text will all the design steps in detail, or just click on the pictures and go through the slide shows.
-				Each picture has a meaningful description and you will still be able to follow the story, even if you don't have the time for the more detailed description.</p>
-				<p>Unfortunately, some of the most interesting things I have done are under Non Disclosure Agreements and I cannot share them here.
-				I am currently in the process of getting approval for some of them and luckily, I will be able to post them soon.</p>
-			</div>
+
+			<h2>MORE RECENT WORK</h2>
 
 			<div id="projects_list">
 
@@ -78,11 +77,12 @@
 						<div class="overlay">
 							<div class="overlay_inner">
 								<div class="topics">
+									<div class="topic">2016</div>
 									<div class="topic">MOBILE</div>
 									<div class="topic">WIREFRAMES</div>
 									<div class="topic">RESEARCH</div>
 									<div class="topic">USER TESTING</div>
-									<div class="topic">MATERIAL DESIgn</div>
+									<div class="topic">MATERIAL DESIGN</div>
 								</div>
 							</div>
 						</div>
@@ -98,6 +98,7 @@
 						<div class="overlay">
 							<div class="overlay_inner">
 								<div class="topics">
+									<div class="topic">2015</div>
 									<div class="topic">MOBILE</div>
 									<div class="topic">WIREFRAMES</div>
 									<div class="topic">ANIMATIONS</div>
@@ -118,6 +119,7 @@
 						<div class="overlay">
 							<div class="overlay_inner">
 								<div class="topics">
+									<div class="topic">2015</div>
 									<div class="topic">MOBILE</div>
 									<div class="topic">WIREFRAMES</div>
 									<div class="topic">VISUAL DESIGN</div>
@@ -139,6 +141,7 @@
 						<div class="overlay">
 							<div class="overlay_inner">
 								<div class="topics">
+									<div class="topic">2015</div>
 									<div class="topic">DATA VISUALISATION</div>
 									<div class="topic">CODE</div>
 									<div class="topic">VISUAL DESIGN</div>
@@ -157,6 +160,7 @@
 						<div class="overlay">
 							<div class="overlay_inner">
 								<div class="topics">
+									<div class="topic">2016</div>
 									<div class="topic">DATA VISUALISATION</div>
 									<div class="topic">CODE</div>
 									<div class="topic">VISUAL DESIGN</div>
@@ -167,6 +171,12 @@
 					<div class="project_title">Making sense of gene isoforms</div>
 				</div>
 
+			</div>
+
+			<h2>OLDER WORK AND PET PROJECTS</h2>
+
+			<div id="projects_list">
+
                 <div class="project">
                     <div class = "project_thumbnail" onmouseover="hover($(this));" onmouseout="unhover($(this));">
                         <a  class="bottom"href="quesee.html">
@@ -175,6 +185,7 @@
                         <div class="overlay">
                             <div class="overlay_inner">
                                 <div class="topics">
+                                    <div class="topic">2013</div>
                                     <div class="topic">CODE</div>
                                     <div class="topic">WIREFRAMES</div>
                                     <div class="topic">VISUAL DESIGN</div>
@@ -194,6 +205,7 @@
 						<div class="overlay">
 							<div class="overlay_inner">
 								<div class="topics">
+									<div class="topic">2013</div>
 									<div class="topic">HUMAN CENTERED</div>
 									<div class="topic">USER OBSERVATION</div>
 									<div class="topic">WIREFRAMES</div>
@@ -204,24 +216,6 @@
 					<div class="project_title">Redesigning a Biological Content Curation Tool</div>
 				</div>
 
-				<div class="project">
-					<div class = "project_thumbnail" onmouseover="hover($(this));" onmouseout="unhover($(this));">
-						<a class="bottom" href="function_candidates.html" >
-							<img src="img/function_candidates/thumbnail2.png"/>
-						</a>
-						<div class="overlay"> 
-							<div class="overlay_inner"> 
-								<div class="topics">
-									<div class="topic">HUMAN COGNITION</div>
-									<div class="topic">VISUAL DESIGN</div>
-									<div class="topic">TYPOGRAPHY</div>
-									<div class="topic">CODE</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="project_title">Improving the usability of a spreadsheet</div>
-				</div>
 				
 				<div class="project">
 					<div class = "project_thumbnail" onmouseover="hover($(this));" onmouseout="unhover($(this));">
@@ -231,6 +225,7 @@
 						<div class="overlay"> 
 							<div class="overlay_inner"> 
 								<div class="topics">
+									<div class="topic">2014</div>
 									<div class="topic">HUMAN COGNITION</div>
 									<div class="topic">VISUALIZATION</div>
 									<div class="topic">INTERACTION DESIGN</div>
@@ -251,6 +246,7 @@
 						<div class="overlay"> 
 							<div class="overlay_inner"> 
 								<div class="topics">
+									<div class="topic">2013</div>
 									<div class="topic">HUMAN CENTERED</div>
 									<div class="topic">USER OBSERVATION</div>
 									<div class="topic">STORYBOARDS</div>
@@ -272,6 +268,7 @@
 						<div class="overlay">
 							<div class="overlay_inner">
 								<div class="topics">
+									<div class="topic">2014</div>
 									<div class="topic">DATA VISUALIZATION</div>
 									<div class="topic">VISUAL DESIGN</div>
 								</div>
@@ -289,6 +286,7 @@
 						<div class="overlay">
 							<div class="overlay_inner">
 								<div class="topics">
+									<div class="topic">2015</div>
 									<div class="topic">DATA VISUALIZATION</div>
 									<div class="topic">VISUAL DESIGN</div>
 								</div>
@@ -306,6 +304,7 @@
 						<div class="overlay">
 							<div class="overlay_inner">
 								<div class="topics">
+									<div class="topic">2015</div>
 									<div class="topic">DATA VISUALIZATION</div>
 									<div class="topic">VISUAL DESIGN</div>
 								</div>
@@ -313,6 +312,26 @@
 						</div>
 					</div>
 					<div class="project_title">Biological Dashboard Refresh</div>
+				</div>
+
+				<div class="project">
+					<div class = "project_thumbnail" onmouseover="hover($(this));" onmouseout="unhover($(this));">
+						<a class="bottom" href="function_candidates.html" >
+							<img src="img/function_candidates/thumbnail2.png"/>
+						</a>
+						<div class="overlay">
+							<div class="overlay_inner">
+								<div class="topics">
+									<div class="topic">2013</div>
+									<div class="topic">HUMAN COGNITION</div>
+									<div class="topic">VISUAL DESIGN</div>
+									<div class="topic">TYPOGRAPHY</div>
+									<div class="topic">CODE</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="project_title">Improving the usability of a spreadsheet</div>
 				</div>
 
 			</div>
