--- a/index.html
+++ b/index.html
@@ -62,35 +62,29 @@
 
         <div id="right_panel">
 			<div id="about">
-				<div>Hello, <br><br>
-					I am a UI developer and UX designer, looking to get more involved in the beautiful field of User Experience
-					Design.
+				<div>User Experience designer, with a strong technical background in software systems and a passion
+					for making technology friendlier.
 				</div>
 				<div>I currently live in <a href="http://en.wikipedia.org/wiki/Cluj-Napoca" target="-blank">Cluj
-					Napoca</a> Romania and I am enjoying every bit of fun this beautiful city has to offer, except the
-					weather, that I sometimes hate, especially during the winters when it gets very cold, so cold that
-					the local flasher was once caught describing himself to women.
+					Napoca</a> Romania and I am enjoying every bit of fun this beautiful city has to offer; except the
+					weather, especially during the winters when it gets very cold, so cold that
+					the local flasher was once caught describing himself to women. True story.
 				</div>
-				<div>I am surrounded by smart individuals with passion for technology and it is sometimes painful to
-					hear users complain about poor experiences with the products we develop.
-					I really think we can do more to earn the respect and appreciation of our users, and more than that,
-					make technology less scary for non technical people.
-				</div>
+
 				<div>Personally, I envision a future where everybody uses technology to make their lives less
-					complicated and more enjoyable and I will proudly look back twenty years from now, thinking that I
+					complicated and focus on the things that truly matter. I will proudly look back twenty years from now, thinking I
 					had a part in all this.
 				</div>
-				<div>I picked up the interest in design while attending a UI/UX seminar back in 2011. I was then
-					working for a company that produces software for the financial industry.
-					They brought in a <a href="http://www.didi.com/">design expert</a> from US to teach a class about user-centered design.
-					Since then, I have been working on complex and interesting user interfaces for both financial and
-					bio informatics industries.
+
+				<div>I picked up the interest in design in 2011, while attending a cognitive engineering seminar. I was then writing
+					software for a trading company and they brought in a <a href="http://www.didi.com/" target="_blank">design expert</a>
+					from US to teach a class about user-centered design. Since then, I have been working on complex and
+					interesting user interfaces for the financial, bio informatics, IoT and real estate industries.
 				</div>
+
 				<div>When I am not working, I like to travel, read, dance and watch sports. I particularly like snooker,
 					combat sports and most recently, Formula 1 racing.
 				</div>
-
-				<div>I would appreciate if you dropped me a line, sharing your thoughts about my work or any other topic related to User Interface Design.</div>
 			</div>
 		</div>
 	</body>
