--- a/projects.html
+++ b/projects.html
@@ -4,15 +4,11 @@
 		<link rel="stylesheet" href="style/resets.css"/>
 		<link rel="stylesheet" href="style/layout.css"/>
 		<link rel="stylesheet" href="style/projects.css"/>
-		<link rel="stylesheet" href="style/project_typography.css"/>
 
         <meta name="viewport" content="width=device-width">
         <meta charset="utf-8"/>
 		
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'/>
-		<link href='https://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900' rel='stylesheet' type='text/css'/>
-		<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'/>
-		<link href='https://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'/>
 
 		<!-- Add jQuery library -->
 		<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
@@ -65,8 +61,6 @@
 		<div id="side_menu"></div>
 		<div id="right_panel">
 
-			<h2>MORE RECENT WORK</h2>
-
 			<div id="projects_list">
 
 				<div class="project">
@@ -87,7 +81,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="project_title">FlexiMeetup - Interaction Design Specialization Capstone Project</div>
+					<div class="project_title">
+						<div class="primary">FlexiMeetup</div>
+						<div class="secondary">Coursera HCI Specialization Capstone Project</div>
+					</div>
 				</div>
 
 				<div class="project">
@@ -108,7 +105,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="project_title">Parking Plus - Enjoy driving in your city again</div>
+					<div class="project_title">
+						<div class="primary">Parking Plus</div>
+						<div class="secondary">Enjoy driving in your city again</div>
+					</div>
 				</div>
 
 				<div class="project">
@@ -130,7 +130,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="project_title">Smart Access Box</div>
+					<div class="project_title">
+						<div class="primary">Smart Access Box</div>
+						<div class="secondary">Secure access control on your smartphone</div>
+					</div>
 				</div>
 
 				<div class="project">
@@ -149,7 +152,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="project_title">Overlaying multivariate data on a biological network</div>
+					<div class="project_title">
+						<div class="primary">Multi color overlay</div>
+						<div class="secondary">Overlaying multivariate data on a biological network</div>
+					</div>
 				</div>
 
 				<div class="project">
@@ -168,12 +174,14 @@
 							</div>
 						</div>
 					</div>
-					<div class="project_title">Making sense of gene isoforms</div>
+					<div class="project_title">
+						<div class="primary">IsoProfiler</div>
+						<div class="secondary">Making sense of gene isoforms</div></div>
 				</div>
 
 			</div>
 
-			<h2>OLDER WORK AND PET PROJECTS</h2>
+			<h2 id="separator"><span id="separator_text">older work and pet projects</span></h2>
 
 			<div id="projects_list">
 
