--- a/education.html
+++ b/education.html
@@ -97,10 +97,20 @@
 
 		<div id="right_panel">
 			<div id="introduction">
-				<p>I have spent the last ten years of my life developing an education around computer science. It was a childhood dream to become a computer programmer and I was fortunate to have the chance to study in a big city with lots of universities, like <a href="http://en.wikipedia.org/wiki/Cluj-Napoca" target="-blank">Cluj Napoca</a>.</p>
-				<p>After college and a few years of professional programming, I fell in love with User Centered Design. It happened when I met <a href="http://www.didi.com/" target="_blank">Bradford Paley</a> at a seminar held on site by
-				the company I was working for at that time. Since then, I read anything I could put my hands on related to UI and UX design and tried to build as many skills as I could to make the transition to professional designing.</p>
-				<p>My formal education in design consists mostly in seminars, online classes and a lot of interesting books that cover a large variety of topics, from human cognition and psychology, to color theory and typography.</p>
+				<p>I have been developing an education around computer science for as long as I can remember. It was a
+					childhood dream to become a computer programmer and I was fortunate enough to have the chance of studying in
+					a big student city like
+					<a href="http://en.wikipedia.org/wiki/Cluj-Napoca" target="-blank">Cluj Napoca</a>.</p>
+
+				<p>After college and a few years of professional programming, I fell in love with User Centered Design.
+					It happened when I met <a href="http://www.didi.com/" target="_blank">Bradford Paley</a> at a seminar
+					held on site by the company I was working for at that time. Since then, I read anything I could put
+					my hands on related to UI and UX design and built as many skills as I could to make the transition
+					to professional designing.</p>
+
+				<p>My formal education in design consists mostly in seminars, online classes and a lot of interesting
+					books that cover a large variety of topics, from human cognition and psychology, to data visualization,
+					color theory and typography.</p>
 			</div>
 
 			<div id="schools_panel">	
