disabled about me page until it's done

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <script>
         $(document).ready(function () {
 			$("#menu").load("menu.html", function () {
-                        var menuItemId = "#menu_about";
+                        var menuItemId = "#menu_home";
                         var itemLinkId = menuItemId + " a";
                         var menuItemText = $(itemLinkId).text();
                         $(itemLinkId).remove();
