--- a/menu.html
+++ b/menu.html
@@ -14,9 +14,9 @@
             <span id="menu_home">
                 <a href="index.html">Home</a>
             </span>
-            <span id="menu_about">
-                <a href="about_me.html">About me</a>
-            </span>
+            <!--<span id="menu_about">-->
+                <!--<a href="about_me.html">About me</a>-->
+            <!--</span>-->
             <span id="menu_projects">
                 <a href="projects.html">Work</a>
             </span>
