Hero images added

--- a/isoprofiler.html
+++ b/isoprofiler.html
@@ -104,6 +104,14 @@
 					<span class="tag">DESKTOP</span>
 				</div>
 
+				<div class="gallery">
+					<a data-fancybox="final"
+					   data-caption="Screenshot with the released version"
+					   href="img/isoprofiler/final_mockup.png">
+						<img class="gallery1" src="img/isoprofiler/final_mockup.png"/>
+					</a>
+				</div>
+
 				<p>When I got involved in this project, a beta version had already been released and the feedback received
 				from the early adopters was not great, both in terms of functionality and usability.
 					The plan was to analyze the findings and come up with an improved design to take care of the shortcomings of
