--- a/multi_color_overlay.html
+++ b/multi_color_overlay.html
@@ -104,12 +104,21 @@
 					<span class="tag">DESKTOP</span>
 				</div>
 
+				<div class="gallery">
+					<a data-fancybox="hero"
+					   data-caption="The released version"
+					   href="img/network_overlay/10.released_version.png">
+						<img class="gallery1" src="img/network_overlay/10.released_version.png"/>
+					</a>
+				</div>
+
 
 				<p>The feature is part of a large bio informatics desktop application used by researchers to find meaning
 					in their genomic data. A lot of the work has to do with interpreting gene expression measurements
 					from biological experiments in the context of a large manually curated knowledge base of relationships
 					found in published scientific papers.</p>
 
+				<div class="subtitle">Context</div>
 
 				<p>When I joined the project, the product owner and the technical lead already had a pretty good idea of
                     what the final result might look like. So I had to play a little ketch up and understand what was
