Sample content for Reva and Mony

--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 
         <meta name="viewport" content="width=device-width">
         <meta charset="utf-8"/>
-		
+
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'/>
 
 		<!-- Add jQuery library -->
@@ -84,6 +84,60 @@
 		<div id="body_panel">
 
 			<div id="projects_list">
+
+				<div class="project">
+					<div class="content">
+						<div class="date">March 2018 - January 2019</div>
+						<div class="title" onmouseover="this.style.cursor='pointer'" onclick="location.href='mony.html';">Mony</div>
+						<div class="tagline">An automated personal finance advisor</div>
+
+						<div class="tags">
+							<span class="tag">USER INTERVIEWS</span>
+							<span class="tag">WIREFRAMING</span>
+							<span class="tag">PROTOTYPING</span>
+							<span class="tag">USER TESTING</span>
+							<span class="tag">DATA VISUALIZATION</span>
+							<span class="tag">BALSAMIQ</span>
+							<span class="tag">FIGMA</span>
+							<span class="tag">MOBILE</span>
+							<span class="tag">PRODUCT MANAGEMENT</span>
+							<span class="tag">PITCHING</span>
+							<span class="tag">MVP</span>
+							<span class="tag">MARKETING</span>
+							<span class="tag">GROWTH</span>
+						</div>
+
+						<p>Mony is a personal finance advisor who mines card transactions to display interesting stats on personal expenses. The core idea was to read SMS alerts sent by most banks on cash widthdrawals, POS payemnts and transfers and extract relevant data in order to show spendings by categories and historical trends.</p>
+
+						<a class="article_link" href="mony.html">Read case study &rarr;</a>
+					</div>
+				</div>
+
+				<div class="project">
+					<div class="content">
+						<div class="date">August 2016 - January 2020</div>
+						<div class="title" onmouseover="this.style.cursor='pointer'" onclick="location.href='reva.html';">Reva</div>
+						<div class="tagline">Building the future of real estate technology</div>
+
+						<div class="tags">
+							<span class="tag">WEB</span>
+							<span class="tag">RESPONSIVENESS</span>
+							<span class="tag">ENTERPRISE</span>
+							<span class="tag">WIREFRAMING</span>
+							<span class="tag">SHADOWING</span>
+							<span class="tag">SKETCH</span>
+							<span class="tag">BALSAMIQ</span>
+							<span class="tag">FIGMA</span>
+							<span class="tag">REMOTE</span>
+							<span class="tag">PRODUCT MANAGEMENT</span>
+							<span class="tag">CUSTOMER SUPPORT</span>
+						</div>
+
+						<p>Reva is a vertically integrated CRM for the US multifamily real estate market. The project started in 2015 when an industry player reached out to a group of Silicon Valley entrepreneurs to co-develop a solution that leverages new technological advancements to address usability and reliability issues and gather actionable analytics.</p>
+
+						<a class="article_link" href="reva.html">Read case study &rarr;</a>
+					</div>
+				</div>
 
 				<div class="project">
 					<div class="content">
@@ -218,7 +272,7 @@
 			</div>
 
 
-			
+
 			<script>
 				function hover(element) {
 					element.find(".overlay").css("visibility", "visible");
