Sample content for Picto

--- a/projects.html
+++ b/projects.html
@@ -87,6 +87,37 @@
 
 				<div class="project">
 					<div class="content">
+						<div class="date">October 2019 - September 2020</div>
+						<div class="title" onmouseover="this.style.cursor='pointer'" onclick="location.href='picto.html';">Picto</div>
+						<div class="tagline">Uber for photography</div>
+
+						<div class="tags">
+							<span class="tag">IDEA VALIDATION</span>
+							<span class="tag">COPETITOR ANALYSIS</span>
+							<span class="tag">BUSINESS PLAN</span>
+							<span class="tag">WIREFRAMES</span>
+							<span class="tag">USER TESTING</span>
+							<span class="tag">FIGMA</span>
+							<span class="tag">MOBILE</span>
+							<span class="tag">PRODUCT MANAGEMENT</span>
+							<span class="tag">MVP</span>
+							<span class="tag">PRICING</span>
+							<span class="tag">PITCHING</span>
+							<span class="tag">BRANDING</span>
+							<span class="tag">COPYWRITING</span>
+							<span class="tag">UX WRITING</span>
+						</div>
+
+						<p>Picto is a mobile marketplace for on demand photography. It is meant for families, travelers and social media
+							active people, on occasions when a selfie is simply not enough. The idea is to hail a nearby photographer
+							for a micro photo shoot with instant delivery at an affordable cost.</p>
+
+						<a class="article_link" href="picto.html">Read case study &rarr;</a>
+					</div>
+				</div>
+
+				<div class="project">
+					<div class="content">
 						<div class="date">March 2018 - January 2019</div>
 						<div class="title" onmouseover="this.style.cursor='pointer'" onclick="location.href='mony.html';">Mony</div>
 						<div class="tagline">An automated personal finance advisor</div>
