Sample content for OctoPlay

--- a/projects.html
+++ b/projects.html
@@ -87,6 +87,37 @@
 
 				<div class="project">
 					<div class="content">
+						<div class="date">December 2020 - November 2021</div>
+						<div class="title" onmouseover="this.style.cursor='pointer'" onclick="location.href='octoplay.html';">OctoPlay</div>
+						<div class="tagline">Mobile games for speech impaired children</div>
+
+						<div class="tags">
+							<span class="tag">USER RESEARCH</span>
+							<span class="tag">WIREFRAMES</span>
+							<span class="tag">USER TESTING</span>
+							<span class="tag">PRODUCT MANAGEMENT</span>
+							<span class="tag">FIGMA</span>
+							<span class="tag">VR</span>
+							<span class="tag">AR</span>
+							<span class="tag">MOBILE</span>
+							<span class="tag">MVP</span>
+							<span class="tag">QUANTITATIVE ANALYSIS</span>
+							<span class="tag">PRICING</span>
+							<span class="tag">BRANDING</span>
+							<span class="tag">COPYWRITING</span>
+							<span class="tag">UX WRITING</span>
+						</div>
+
+						<p>OctoPlay is a game platform dedicated to children with speech impairments, parents and therapists. It is
+							co-developed with domain experts in SLP and ASD and leverages AR and VR to keep children engaged and
+							focused.</p>
+
+						<a class="article_link" href="octoplay.html">Read case study &rarr;</a>
+					</div>
+				</div>
+
+				<div class="project">
+					<div class="content">
 						<div class="date">October 2019 - September 2020</div>
 						<div class="title" onmouseover="this.style.cursor='pointer'" onclick="location.href='picto.html';">Picto</div>
 						<div class="tagline">Uber for photography</div>
