--- a/projects.html
+++ b/projects.html
@@ -87,6 +87,32 @@
 
 				<div class="project">
 					<div class="content">
+						<div class="date">December 2021 - Present</div>
+						<div class="title" onmouseover="this.style.cursor='pointer'" onclick="location.href='rezolve.html';">Rezolve</div>
+						<div class="tagline">Mobile e-commerce engagement platform</div>
+
+						<div class="tags">
+							<span class="tag">WEB</span>
+							<span class="tag">RESPONSIVENESS</span>
+							<span class="tag">ENTERPRISE</span>
+							<span class="tag">WIREFRAMING</span>
+							<span class="tag">PROTOTYPING</span>
+							<span class="tag">USER TESTING</span>
+							<span class="tag">FIGMA</span>
+							<span class="tag">REMOTE</span>
+						</div>
+
+						<p class="first_paragraph">Rezolve is a marketing platform that offers a mobile shopping solution along with
+							digital payments and e-marketing products. It allows brands and over 150000 merchants to leverage location
+							data from geo zones and beacons and to convert visual and audio media to an interactive experience on mobile
+							devices.</p>
+
+						<a class="article_link" href="rezolve.html">Read case study &rarr;</a>
+					</div>
+				</div>
+
+				<div class="project">
+					<div class="content">
 						<div class="date">December 2020 - November 2021</div>
 						<div class="title" onmouseover="this.style.cursor='pointer'" onclick="location.href='octoplay.html';">OctoPlay</div>
 						<div class="tagline">Mobile games for speech impaired children</div>
