wip indicator added to Rezolve

--- a/rezolve.html
+++ b/rezolve.html
@@ -48,6 +48,8 @@
 
 
 
+
+
     </script>
 
     <!-- FullStory Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
@@ -72,6 +74,8 @@
 
 
 
+
+
     </script>
 
 </head>
@@ -86,6 +90,8 @@
 
             ga('create', 'UA-65113069-1', 'auto');
             ga('send', 'pageview');
+
+
 </script>
 
 <script type="text/javascript">
@@ -98,6 +104,8 @@
                     initTopMenuActions("body_panel");
                 });
             });
+
+
 </script>
 
 <div id="menu"></div>
@@ -129,40 +137,49 @@
 
         <p class="first_paragraph">Rezolve is a marketing platform that offers a mobile shopping solution along with
             digital payments and e-marketing products. It allows brands and over 150000 merchants to leverage location
-            data from geo zones and beacons and to convert visual and audio media to an interactive experience on mobile
+            data from geo zones and beacons and to convert visual and audio media into interactive experiences on mobile
             devices.</p>
 
         <div id="team_setup" class="subtitle2">Team setup</div>
         <p>Rezolve is a totally remote company with people working from all over the world. I collaborate with the Head
-            of UX and a Graphic Designer on a daily basis. I work with Product Managers and Product Owners to clarify
-            needs, timelines and get feedback on the designs.
+            of UX and the Graphic Designer on a daily basis. I also work with Product Managers and engineering teams to
+            clarify
+            needs, timelines and get feedback on designs.
         </p>
 
         <div id="my_role" class="subtitle2">My role</div>
         <p>I joined the company as a Senior UX Designer. Since then I have worked on some very interesting and
-            challenging things.
+            challenging projects:
         </p>
 
         <ul class="article_list">
-            <li>A thorough audit of the mobile app and the self serve creator’s web platform</li>
-            <li>A redesign of the self serve web platform to address the major usability issues, accommodate new
-                features, an improved mobile experience and a friendlier and more professional look and feel
+            <li>A detailed usability audit for the mobile app and the self serve web platform for creators/merchants
             </li>
-            <li>Marketing campaign analytics, a new feature</li>
-            <li>E-commerce onboarding wizard that takes the merchant through a pleasant experience while hiding the
-                complexity of integrating with several systems behind
+            <li>A redesign of the self serve web platform to address major usability issues, accommodate new
+                features, improve the mobile experience and a give a friendlier and more professional look and feel
+            </li>
+            <li>Marketing campaign analytics</li>
+            <li>E-commerce on boarding wizard that takes merchants through a pleasant experience while hiding the
+                complexity of integrating with several systems behind the scene
             </li>
             <li>An admin tool for setting up the white label solution for partners</li>
-            <li>Major improvements to the content builder, from usability improvements on large and small screens, to
-                incorporating templates and better content
+            <li>Major improvements to the content builder, from usability improvements on large and small screens to
+                incorporating templates and better content ideas
             </li>
         </ul>
 
-        <p>I am responsible for understanding the user and business needs, the technical constraints of the current
-            implementation and the delivery timeline. I spend my time talking to stakeholders, wireframing solutions and
+        <p>I am responsible for understanding the user and business needs, the technical constraints and the delivery
+            timeline. I spend my day talking to stakeholders, wireframing, iterating and prototyping solutions and
             supervising the visual design work.
         </p>
 
+        <div class="gallery">
+            <a data-fancybox="wip"
+               data-caption="Case studies for this project are being worked on"
+               href="img/wip.png">
+                <img class="gallery1" src="img/wip.png"/>
+            </a>
+        </div>
 
         <div id="disqus_thread"></div>
         <script>
@@ -182,6 +199,8 @@
                         s.setAttribute('data-timestamp', +new Date());
                         (d.head || d.body).appendChild(s);
                     })();
+
+
         </script>
 
     </div>
